tests/reference/asr-subroutine5-24e8434.stderr
tests/errors/subroutine5.f90:4:9 semantic error: Variable 'd' not declared
c = a + d
        ^
